<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/editText1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/website_url"
        tools:layout_editor_absoluteX="41dp"
        tools:layout_editor_absoluteY="58dp" />

    <Button
        android:id="@+id/button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/website_button"
        android:onClick="openWebsite"
        tools:layout_editor_absoluteX="41dp"
        tools:layout_editor_absoluteY="120dp" />

    <EditText
        android:id="@+id/editText2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/map_location"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="232dp" />

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/map_button"
        android:onClick="openLocation"
        tools:layout_editor_absoluteX="41dp"
        tools:layout_editor_absoluteY="294dp" />

    <EditText
        android:id="@+id/editText3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="160dp"
        android:layout_marginRight="160dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/share"
        app:layout_constraintEnd_toEndOf="parent"
        tools:layout_editor_absoluteY="397dp" />

    <Button
        android:id="@+id/button3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/share_button"
        android:onClick="shareText"
        tools:layout_editor_absoluteX="43dp"
        tools:layout_editor_absoluteY="453dp" />
</androidx.appcompat.widget.LinearLayoutCompat>